Bug 135500 - UI: previously inserted images are broken (not Skia related)
Summary: UI: previously inserted images are broken (not Skia related)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: SoftEdgeFallout
  Show dependency treegraph
 
Reported: 2020-08-06 14:03 UTC by tm
Modified: 2021-03-27 16:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
ODG-File with broken images (323.59 KB, application/vnd.oasis.opendocument.graphics)
2020-08-06 14:03 UTC, tm
Details
Expected behavior (946 bytes, image/png)
2020-08-06 14:05 UTC, tm
Details
Actual behavior as of 7.0.0.3 (various) (7.09 KB, image/png)
2020-08-06 14:06 UTC, tm
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tm 2020-08-06 14:03:50 UTC
Created attachment 164005 [details]
ODG-File with broken images

Hi,

I've encountered some issues when opening an old .odg file from a previous stable version of libre office draw(6.x). Many (but not all of them) images are utterly broken when being displayed in the UI. It looks like that some images contain other images that are also present in the document but not supposed to be placed at the specific location.  Those issues were not there when using the previous 6.x-version of draw. It seems to be a UI only issue, as it does not affect the exported pdf-file from that .odg file.
Comment 1 tm 2020-08-06 14:05:20 UTC
Created attachment 164006 [details]
Expected behavior

Expected appearance of image #1
Comment 2 tm 2020-08-06 14:06:26 UTC
Created attachment 164007 [details]
Actual behavior as of 7.0.0.3 (various)
Comment 3 Telesto 2020-08-06 20:24:22 UTC
Confirm with
Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: ru-RU (nl_NL); UI: en-US
Calc: CL

not with
6.4
Comment 4 raal 2020-08-12 20:07:56 UTC
This seems to have begun at the below commit.
Adding Cc: to Mike Kaganski ; Could you possibly take a look at this one?
Thanks
 1346a232e449ab004077d170510ae00e5409680f is the first bad commit
commit 1346a232e449ab004077d170510ae00e5409680f
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jun 2 01:48:09 2020 +0200

    source 8c84448febf817875ad0d377de0f0b34987992cb

author	Mike Kaganski <mike.kaganski@collabora.com>	2020-05-28 20:13:50 +0200
committer	Mike Kaganski <mike.kaganski@collabora.com>	2020-05-29 06:26:16 +0200
commit 8c84448febf817875ad0d377de0f0b34987992cb (patch)
tree 03442162059cbe6fdfe82fa983e51881cab803a5
parent c9f4952b98da9adad1b556414c5fcecafedca473 (diff)
Use buffer with alpha in VclProcessor2D::RenderUnifiedTransparencePrimitive2D
Comment 5 Mike Kaganski 2020-08-13 15:51:46 UTC
https://gerrit.libreoffice.org/c/core/+/100674
Comment 6 Mike Kaganski 2020-08-13 16:25:18 UTC
(In reply to Mike Kaganski from comment #5)
> https://gerrit.libreoffice.org/c/core/+/100674

It seems to handle also tdf#134213, tdf#134382, and tdf#134968...
Comment 7 Commit Notification 2020-08-13 23:01:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf021c369f2306ee507da9bd3cc4cd10ac5d234c

tdf#135500: always use transparent and clear content vdev in impBufferDevice

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2020-08-14 13:32:22 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/d5a8056981562bfd5d191a7ceb0131cb52d06749

tdf#135500: always use transparent and clear content vdev in impBufferDevice

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 tm 2020-10-19 07:08:01 UTC
Checked it with the recent 7.0.2 release. Everything is fine now. Thanks alot!