drawinglayer/source/processor2d/vclhelperbufferdevice.hxx
@@ -37,11 +37,9 @@ class impBufferDevice
     VclPtr<VirtualDevice> mpMask;
     VclPtr<VirtualDevice> mpAlpha;
     tools::Rectangle maDestPixel;
-    bool mbContentTransparent;
 
 public:
-    impBufferDevice(OutputDevice& rOutDev, const basegfx::B2DRange& rRange,
-                    bool bContentTransparent = false);
+    impBufferDevice(OutputDevice& rOutDev, const basegfx::B2DRange& rRange);
     ~impBufferDevice();
 
     void paint(double fTrans = 0.0);
