drawinglayer/source/processor2d/vclprocessor2d.cxx
@@ -841,14 +841,13 @@ void VclProcessor2D::RenderUnifiedTransparencePrimitive2D(
         // transparence is in visible range
         basegfx::B2DRange aRange(rTransCandidate.getChildren().getB2DRange(getViewInformation2D()));
         aRange.transform(maCurrentTransformation);
-        impBufferDevice aBufferDevice(*mpOutputDevice, aRange, true);
+        impBufferDevice aBufferDevice(*mpOutputDevice, aRange);
 
         if (aBufferDevice.isVisible())
         {
             // remember last OutDev and set to content
             OutputDevice* pLastOutputDevice = mpOutputDevice;
             mpOutputDevice = &aBufferDevice.getContent();
-            mpOutputDevice->Erase();
 
             // paint content to it
             process(rTransCandidate.getChildren());
@@ -871,7 +870,7 @@ void VclProcessor2D::RenderTransparencePrimitive2D(
 
     basegfx::B2DRange aRange(rTransCandidate.getChildren().getB2DRange(getViewInformation2D()));
     aRange.transform(maCurrentTransformation);
-    impBufferDevice aBufferDevice(*mpOutputDevice, aRange, true);
+    impBufferDevice aBufferDevice(*mpOutputDevice, aRange);
 
     if (!aBufferDevice.isVisible())
         return;
@@ -879,7 +878,6 @@ void VclProcessor2D::RenderTransparencePrimitive2D(
     // remember last OutDev and set to content
     OutputDevice* pLastOutputDevice = mpOutputDevice;
     mpOutputDevice = &aBufferDevice.getContent();
-    mpOutputDevice->Erase();
 
     // paint content to it
     process(rTransCandidate.getChildren());
@@ -890,8 +888,6 @@ void VclProcessor2D::RenderTransparencePrimitive2D(
     // when painting transparence masks, reset the color stack
     basegfx::BColorModifierStack aLastBColorModifierStack(maBColorModifierStack);
     maBColorModifierStack = basegfx::BColorModifierStack();
-
-    mpOutputDevice->Erase();
 
     // paint mask to it (always with transparence intensities, evtl. with AA)
     process(rTransCandidate.getTransparence());
